--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
     <section class="popular-topics">
       <h2>Most Popular Topics</h2>
       <ul class="topic-list">
-        <li><a href="#">Understanding Depression</a></li>
-        <li><a href="#">Tips for Mental Wellness</a></li>
-        <li><a href="#">Coping with Anxiety</a></li>
-        <li><a href="#">Healthy Lifestyle Choices</a></li>
+        <li><a href="understanding-depression.html">Understanding Depression</a></li>
+        <li><a href="mental-wellness.html">Tips for Mental Wellness</a></li>
+        <li><a href="understanding-anxiety.html">Coping with Anxiety</a></li>
+        <li><a href="lifestyle-habits.html">Healthy Lifestyle Choices</a></li>
       </ul>
     </section>
 
     <section class="recent-topics" style="margin-top:2rem;">
       <h2>Recent Topics</h2>
       <ul class="topic-list">
-        <li><a href="#">The Science of Sleep</a></li>
-        <li><a href="#">Mindfulness Techniques</a></li>
-        <li><a href="#">Nutrition and Mental Health</a></li><li><a href="#">How to Manage Stress</a></li>
+        <li><a href="science-sleep.html">The Science of Sleep</a></li>
+        <li><a href="mindfulness-techniques.html">Mindfulness Techniques</a></li>
+        <li><a href="nutrition-mentalhealth.html">Nutrition and Mental Health</a></li><li><a href="manage-stress.html">How to Manage Stress</a></li>
       </ul>
     </section>
   </aside>
