--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vitapath - Home</title>
-  <img src="images/logo.png" alt="VitaPath Logo" width="150">
+  <img src="images/logo.png" alt="Vitapath" width="150">
 ```
   <style>
     body {
