--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: flex; justify-content: space-between; align-items: center;
       position: sticky; top: 0; z-index: 1000;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      <img src="images/logo.png" alt="Vitapath" width="150">
+      <img src="images/logo.png" alt="Vitapath.png" width="150">
 
     }
     header h1 {
