--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       padding: 1rem 2rem; margin-top: 3rem; font-size: 0.9rem;
     }
   </style>
+  <img src="images/vitapath.png" alt="Vitapath" width="150">
+
 </head>
 <body>
 
