--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       background: #f9f9f9; color: #333; line-height: 1.6;
       margin: 0; padding: 0;
     }
+  <img src="images/Vitapath.png" alt="Vitapath Logo" style="height: 50px; vertical-align: middle;">
+  <h1 style="display: inline-block; margin-left: 10px;">Vitapath</h1>
     header {
       
       background-color: #007bff; color: white; padding: 1rem 2rem;
