--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       display: flex; justify-content: space-between; align-items: center;
       position: sticky; top: 0; z-index: 1000;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      <img src="images/logo.png" alt="Vitapath.png" width="150">
+      <img src="images/vitapath.png" alt="Vitapath.png" width="150">
 
     }
     header h1 {
@@ -102,6 +102,8 @@
 <body>
 
 <header>
+    <img src="images/Vitapath.png" alt="Vitapath Logo" style="height: 50px; vertical-align: middle;">
+  <h1 style="display: inline-block; margin-left: 10px;">Vitapath</h1>
   <h1>Vitapath</h1>
   <nav>
     <ul>
