--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
         </form>
       </li>
     </ul>
-  </nav>
+  </nav> 
+  
+  <img src="images/Vitapath.png" alt="Vitapath Logo" style="height: 50px; vertical-align: middle;">
+  <h1 style="display: inline-block; margin-left: 10px;">Vitapath</h1>
 </header>
 
 <main>
