--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       position: sticky; top: 0; z-index: 1000;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
+    .logo {
+  height: 50px;
+  vertical-align: middle;
+} 
     header h1 {
       font-size: 1.5rem; letter-spacing: 2px;
     }
