--- a/categories.html
+++ b/categories.html
@@ -23,6 +23,10 @@
       position: sticky;
       top: 0;
     }
+    .logo {
+  height: 50px;
+  vertical-align: middle;
+} 
 
     nav ul {
       list-style: none;
@@ -77,6 +81,9 @@
       margin-top: 3rem;
     }
   </style>
+  <img src="images/Vitapath.png" alt="Vitapath Logo" class="logo">
+  <h1 class="site-title">Vitapath</h1>
+
 </head>
 <body>
 
