--- a/categories.html
+++ b/categories.html
@@ -4,8 +4,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Categories - MySite</title>
-<link rel="stylesheet" href="style.css">
+<style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
 
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      margin: 0;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a:hover {
+      color: #ffdd57;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.05);
+    }
+
+    h2 {
+      color: #007bff;
+      border-bottom: 2px solid #007bff;
+      padding-bottom: 0.3rem;
+      margin-bottom: 1rem;
+    }
+
+    .category {
+      padding: 1rem;
+      border: 1px solid #ddd;margin-bottom: 1rem;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+
+    .category:hover {
+      background-color: #f1f1f1;
+      border-color: #007bff;
+    }
+
+    footer {
+      background: #222;
+      color: #ddd;
+      text-align: center;
+      padding: 1rem 2rem;
+      margin-top: 3rem;
+    }
+  </style>
   <img src="images/Vitapath.png" alt="Vitapath Logo" class="logo">
   <h1 class="site-title">Vitapath</h1>
 
