--- a/about.html
+++ b/about.html
@@ -59,6 +59,18 @@
 
 <header>
   <h1>Vitapath</h1>
+  <header>
+  <img src="images/Vitapath.png" alt="Vitapath Logo">
+  <h1>Vitapath</h1>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="categories.html">Categories</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
