--- a/manage-stress.html
+++ b/manage-stress.html
@@ -11,6 +11,18 @@
   <header>
     <h1>Manage Stress</h1>
   </header>
+  <header>
+  <img src="images/Vitapath.png" alt="Vitapath Logo">
+  <h1>Vitapath</h1>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="categories.html">Categories</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
 
   <nav>
     <a href="index.html">Home</a>
