--- a/mental-wellness.html
+++ b/mental-wellness.html
@@ -16,6 +16,17 @@
     <h1 style="display: inline-block; margin-left: 10px;">VitaPath</h1>
     <p>Your Wellness Journey</p>
   </header>
+<header>
+  <img src="images/Vitapath.png" alt="Vitapath Logo">
+  <h1>Vitapath</h1>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="categories.html">Categories</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
   <nav>
     <a href="index.html">Home</a>
