--- a/nutrition-fitness.html
+++ b/nutrition-fitness.html
@@ -53,6 +53,17 @@
 <header>
   <h1>Nutrition & Fitness</h1>
 </header>
+<header>
+  <img src="images/Vitapath.png" alt="Vitapath Logo">
+  <h1>Vitapath</h1>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="categories.html">Categories</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
 <nav>
   <a href="index.html">Home</a>
