--- a/understanding-anxiety.html
+++ b/understanding-anxiety.html
@@ -15,6 +15,17 @@
     <h1>VitaPath</h1>
     <p>Understanding Anxiety & How to Cope</p>
   </header>
+<header>
+  <img src="images/Vitapath.png" alt="Vitapath Logo">
+  <h1>Vitapath</h1>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="categories.html">Categories</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
   <nav>
     <a href="index.html">Home</a>
