--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
       padding: 1rem 2rem; margin-top: 3rem; font-size: 0.9rem;
     }
   </style>
+     <meta name="google-site-verification" content="your_verification_code" />
+  Sitemap: https://medicalguiden.github.io/Vitapath/sitemap.xml
+User-agent: *
+Disallow:
 </head>
 <body>
 
